# style-image-transfer

./: .gitignore  README.md  colab_gpu.ipynb  colab_notebook.ipynb  download_coco_subset.py  download_datasets.py  neural_style.py  optimize_style.py  pyproject.toml  saliency.py  segmentation.py  stylize.py  test.py  train.py  vgg.py
datasets/: __init__.py  datasets.py
losses/: __init__.py  losses.py
models/: __init__.py  adain_model.py
