[project]
name = "neural-style"
version = "0.2.0"
description = "Image Style Transfer - Optimization-based and Feedforward (AdaIN) implementations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.3",
    "pillow>=11.2.1",
    "scipy>=1.15.3",
    "tensorflow>=2.19.0",
    "tensorflow-metal>=1.2.0 ; sys_platform == 'darwin'",
    "tensorflow-io-gcs-filesystem==0.31.0 ; sys_platform == 'win32'",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "scikit-image>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120
lint.select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "W291",
    "W292",
    "W293",
]